--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
 body {
-  @apply bg-neutral-100 text-neutral-900;
+  @apply bg-slate-100 text-slate-900 min-h-screen selection:bg-purple-500 selection:text-white;
 }
