Fix dark theme animation

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
     @apply min-h-screen selection:bg-purple-500 selection:text-white;
     @apply bg-neutral-100 text-slate-900;
     @apply dark:bg-slate-900 dark:text-slate-100;
+    @apply transition-colors duration-300 ease-in-out;
   }
 }
 
